--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Animated Buttons Hover Effect</title>
   </head>
   <body>
-    <a href="#" style="--clr: #ff22bb; --i: 0"><span>Click Me!</span></a>
-    <a href="#" style="--clr: #00ccff; --i: 1"><span>Click Me!</span></a>
-    <a href="#" style="--clr: #22e622; --i: 2"><span>Click Me!</span></a>
+    <a href="#" style="--clr: #ff22bb; --i: 0"><span>Hover Me!</span></a>
+    <a href="#" style="--clr: #00ccff; --i: 1"><span>Hover Me!</span></a>
+    <a href="#" style="--clr: #22e622; --i: 2"><span>Hover Me!</span></a>
   </body>
 </html>
